[metadata]
name = eggnog-mapper
version = attr: eggnogmapper.version.__VERSION__
author = Jaime Huerta-Cepas
author_email = jhcepas@gmail.com
maintainer = Jaime Huerta-Cepas
maintainer_email = huerta@embl.de
platforms = OS Independent
description = Fast functional annotation of novel sequences using eggNOG orthology assignments.
long_description = file: README.md
long_description_content_type = text/markdown
url = http://eggnog-mapper.embl.de
keywords = functional annotation, orthology, eggNOG
license = GPLv3
license_file = LICENSE.txt
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = False
packages = find:
scripts =
    download_eggnog_data.py
    create_dbs.py
    emapper.py
    hmm_mapper.py
    hmm_server.py
    hmm_worker.py
python_requires = >=3.7
install_requires =
    biopython==1.76
    psutil==5.7.0
    xlsxwriter==1.4.3

[options.package_data]
eggnogmapper.bin = *
eggnogmapper.annotation.tax_scopes = *